manifests/prd/miroir/Namespace-miroir-system.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
  name: miroir-system
