manifests/prd/miroir/CiliumNetworkPolicy-miroir-controller.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: miroir-controller
  namespace: miroir-system
spec:
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: controller
      app.kubernetes.io/name: miroir
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: vmagent
            k8s:io.kubernetes.pod.namespace: monitoring
      toPorts:
        - ports:
            - port: "8081"
              protocol: TCP
